k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: store-pjt
  labels:
    istio-injection: enabled
