k8s/approuter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: approuter
  namespace: store-pjt
  labels:
    app: approuter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: approuter
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: approuter
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: approuter
          image: "ghcr.io/dohyun-mun/store-pjt-approuter:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
