k8s/approuter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: approuter
  namespace: store-pjt
  labels:
    app: approuter
spec:
  type: ClusterIP
  selector:
    app: approuter
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
