k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-pjt
  namespace: store-pjt
  labels:
    app: store-pjt
spec:
  type: ClusterIP
  ports:
    - port: 4004
      targetPort: 4004
      protocol: TCP
  selector:
    app: store-pjt
